--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "lodash-es": "4.17.21",
         "moment": "2.29.1",
         "ng-apexcharts": "1.5.10",
+        "ng2-pdf-viewer": "^7.0.2",
         "ngx-image-cropper": "^5.0.1",
         "ngx-markdown": "12.0.0",
         "ngx-quill": "14.0.0",
