--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@ngneat/transloco": "2.20.1",
         "apexcharts": "3.26.3",
         "crypto-js": "3.3.0",
+        "file-saver": "^2.0.5",
         "highlight.js": "10.7.2",
         "lodash-es": "4.17.21",
         "moment": "2.29.1",
@@ -49,6 +50,7 @@
         "rxjs": "6.6.7",
         "tslib": "2.2.0",
         "web-animations-js": "2.3.2",
+        "xlsx": "^0.17.4",
         "zone.js": "0.11.4"
     },
     "devDependencies": {
